add link to landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,12 @@
           <ul class="nav">
             <li class="fadeInDown animated d1 "><a href="#" class="active" id="home" menuid="0" followlink="true" >Home</a></li>
             <li class="fadeInDown animated d2"><a href="#" menuid="1" followlink="true">About</a></li>
+            <li class="fadeInDown animated d2"><a href="/instagram/auth" menuid="1" followlink="true">Instagram Dashboard</a></li>
             <li class="dropdown fadeInDown animated d3">
             <a href="#" class="trigger right-caret">Service</a>
             <ul class="firstlevel dropdown-menu sub-menu" style="display: none;">
             <li class="twolevel">
+
             <a class="trigger right-caret">Email Support</a>
   <!--   <ul class="thirdlevel dropdown-menu sub-menu" style="margin-left: -563px; display: none;">
   <li><a href="#" menuid="220" followlink="true">ŞİRKET BİRLEŞME & SATIN ALMA</a></li>
@@ -65,6 +67,8 @@
       </li>
       <li class="fadeInDown animated d3"><a href="#Iletisim" menuid="11" followlink="true">Dislaimer</a></li>
       <li class="fadeInDown animated d2"><a href="#" menuid="1" followlink="true">Blog</a></li>
+      <li class="fadeInDown animated d2">
+      </li>
       <li class="fadeInDown animated d2"><a href="#" menuid="1" followlink="true">Contact Us</a></li>
     </ul>
   </div>
