add instagram link

--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -20,6 +20,7 @@
         <li><a href="#Varlik-Yonetimi" menuid="10" followlink="true">XXX</a></li>
         <li><a href="#Varlik-Yonetimi" menuid="10" followlink="true">Team</a></li>
         <li><a href="#Varlik-Yonetimi" menuid="10" followlink="true">Contact Us</a></li>
+        <li><a href="/instagram/auth" menuid="10" followlink="true">Instagram</a></li>
       </ul></li>
     </div>
   </header>
