--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="collapse navbar-collapse pull-right" id="main-menu">
       <ul class="nav">
-        <li class="fadeInDown animated d1 "><a href="#" class="active" id="home" menuid="0" followlink="true" >Home</a></li>
+        <li class="fadeInDown animated d1 "><a href="/" class="active" id="home" menuid="0" followlink="true" >Home</a></li>
         <li class="fadeInDown animated d2"><a href="#" menuid="1" followlink="true">About</a></li>
         <li class="dropdown fadeInDown animated d3"><a href="#" class="trigger right-caret">Service</a></li>
         <li><a href="#Varlik-Yonetimi" menuid="10" followlink="true">XXX</a></li>
