form for new subscribers

--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Sing up to our newsletter!</h1>
-<%= form_for @suscriber do |f|  %>
+<%= form_for @subscriber do |f|  %>
   <%= f.text_field :name, placeholder: "Name" %>
   <%= f.email_field :email, placeholder: "Email" %>
   <%= f.select :source, ["Google", "Instagram", "Word of Mouth", "Other"],
