--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Sing up to our newsletter!</h1>
+<h1>Sign up to our newsletter!</h1>
 <%= form_for @subscriber do |f|  %>
   <%= f.text_field :name, placeholder: "Name" %>
   <%= f.email_field :email, placeholder: "Email" %>
