--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,8 +1,3 @@
 <h1>Sign up to our newsletter!</h1>
-<%= form_for @subscriber do |f|  %>
-  <%= f.text_field :name, placeholder: "Name" %>
-  <%= f.email_field :email, placeholder: "Email" %>
-  <%= f.select :source, ["Google", "Instagram", "Word of Mouth", "Other"],
-              prompt: "How did you hear about us?"%>
-  <%= f.submit %>
-<% end %>
+
+<%= render 'subform' %>
